revert to Java 8